--- a/lab-website/_layouts/default.html
+++ b/lab-website/_layouts/default.html
@@ -21,11 +21,11 @@
         
         <div class="horizontal-nav">
           <ul>
-            <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
-            <li><a href="{{ site.baseurl }}/research.html">Research</a></li>
-            <li><a href="{{ site.baseurl }}/publications.html">Publications</a></li>
-            <li><a href="{{ site.baseurl }}/team.html">Team</a></li>
-            <li><a href="{{ site.baseurl }}/contact.html">Contact</a></li>
+            <li><a href="{{ site.baseurl }}/lab-website/index.html">Home</a></li>
+            <li><a href="{{ site.baseurl }}/lab-website/research.html">Research</a></li>
+            <li><a href="{{ site.baseurl }}/lab-website/publications.html">Publications</a></li>
+            <li><a href="{{ site.baseurl }}/lab-website/team.html">Team</a></li>
+            <li><a href="{{ site.baseurl }}/lab-website/contact.html">Contact</a></li>
           </ul>
         </div>
 
