--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
             <li><a href="{{ site.baseurl }}/research.html">Research</a></li>
             <li><a href="{{ site.baseurl }}/publications.html">Publications</a></li>
             <li><a href="{{ site.baseurl }}/team.html">Team</a></li>
-            <li><a href="{{ site.baseurl }}/contact.html">Contact</a></li>
+            <li><a href="{{ site.baseurl }}/lab-website/contact.html">Contact</a></li>
           </ul>
         </div>
 
