--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,9 @@
         <div class="horizontal-nav">
           <ul>
             <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
-            <li><a href="{{ site.baseurl }}/research.html">Research</a></li>
-            <li><a href="{{ site.baseurl }}/publications.html">Publications</a></li>
-            <li><a href="{{ site.baseurl }}/team.html">Team</a></li>
+            <li><a href="{{ site.baseurl }}/lab-website/research.html">Research</a></li>
+            <li><a href="{{ site.baseurl }}/lab-website/publications.html">Publications</a></li>
+            <li><a href="{{ site.baseurl }}/lab-website/team.html">Team</a></li>
             <li><a href="{{ site.baseurl }}/lab-website/contact.html">Contact</a></li>
           </ul>
         </div>
