--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <link rel="stylesheet" type="text/css" href="{{ '/assets/css/print.css' | relative_url }}" media="print">
+    <link rel="stylesheet" href="{{ '/lab-website/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" type="text/css" href="{{ '/lab-website/assets/css/print.css' | relative_url }}" media="print">
     {% seo %}
   </head>
 
@@ -22,10 +22,10 @@
         <div class="horizontal-nav">
           <ul>
             <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
-            <li><a href="{{ site.baseurl }}/research.html">Research</a></li>
-            <li><a href="{{ site.baseurl }}/publications.html">Publications</a></li>
-            <li><a href="{{ site.baseurl }}/team.html">Team</a></li>
-            <li><a href="{{ site.baseurl }}/contact.html">Contact</a></li>
+            <li><a href="{{ site.baseurl }}/lab-website/research.html">Research</a></li>
+            <li><a href="{{ site.baseurl }}/lab-website/publications.html">Publications</a></li>
+            <li><a href="{{ site.baseurl }}/lab-website/team.html">Team</a></li>
+            <li><a href="{{ site.baseurl }}/lab-website/contact.html">Contact</a></li>
           </ul>
         </div>
 
